--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,55 @@
-ECHO is on.
+#grid-container{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(9, minmax(100px, auto));
+    background: #3399ff;
+    font-family: 'Ubuntu', sans-serif;
+}
+#title{
+  grid-column: 2 / 5;
+  grid-row: 2 / 3;
+  text-align: center;
+  font-size: 44px;
+  margin-bottom: 0;
+  opacity: 0.7;
+}
+#under-title{
+  grid-column: 2 / 5;
+  grid-row: 3 / 4;
+  text-align: center;
+}
+#scoreBoard{
+  grid-column: 2 / 5;
+  grid-row: 4 / 5;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  background: white;
+}
+#win{
+  text-align: center;
+  font-size: 50px;
+  align-self: center;
+}
+#lose{
+  text-align: center;
+  font-size: 50px;
+  align-self: center;
+}
+.button{
+  margin: 15px;
+  font-size: 22px;
+  border: none;
+}
+#paper{
+  grid-column: 2 / 3;
+  grid-row: 6 / 7;
+}
+#rock{
+  grid-column: 3 / 4;
+  grid-row: 6 / 7;
+}
+#scissors{
+  grid-column: 4 / 5;
+  grid-row: 6 / 7;
+}
