--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@
   font-size: 22px;
   border: none;
 }
+#reset{
+  grid-column: 3 / 4;
+  grid-row: 5 / 6;
+}
 #paper{
   grid-column: 2 / 3;
   grid-row: 6 / 7;
